@@ -1,0 +1,20 @@
+#!/bin/sh
+### BEGIN INIT INFO
+# Provides:          neutron-fwaas-l3-agent
+# Required-Start:    $network $local_fs $remote_fs $syslog
+# Required-Stop:     $remote_fs
+# Should-Start:      mysql postgresql rabbitmq-server keystone openvswitch-switch
+# Should-Stop:       mysql postgresql rabbitmq-server keystone openvswitch-switch
+# Default-Start:     2 3 4 5
+# Default-Stop:      0 1 6
+# Short-Description: Neutron FWaaS L3 agent
+# Description:       Provide FWaaS L3 agent for neutron
+### END INIT INFO
+
+# Authors: Thomas Goirand <zigo@debian.org>
+DESC="OpenStack Neutron FWaaS L3 agent"
+PROJECT_NAME=neutron
+NAME=${PROJECT_NAME}-fwaas-l3-agent
+# --config-file=/etc/neutron/neutron.conf will be happened 
+# to DAEMON_ARGS later by openstack-pkg-tools
+DAEMON_ARGS="--config-file=/etc/neutron/fwaas_driver.ini"
