@@ -5,6 +5,9 @@ neutron-fwaas (1:9.0.0~b1-1) experimental; urgency=medium
   * Also package what's in /usr/bin/*.
   * Standards-Version is now 3.9.8 (no change).
   * Fixed debian/copyright ordering.
+  * Added a neutron-fwaas-common package holding config files, preparing the
+    Py3 transition.
+  * Added a neutron-fwaas-l3-agent, holding the init script.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 17 Jun 2016 09:30:07 +0200
 
